objects/Licensing_Event__e/Licensing_Event__e.object-meta.xml
<CustomObject>
    <description>Licensing Event</description>
    <label>Licensing Event</label>
    <pluralLabel>Licensing Events</pluralLabel>
</CustomObject>