objects/Licensing_Event__e/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>