objects/Licensing_Event__e/fields/AI_Free_Credits__c.field-meta.xml
<CustomField>
    <fullName>AI_Free_Credits__c</fullName>
    <description>AI Free Credits</description>
    <label>AI Free Credits</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>