objects/Licensing_Event__e/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <description>Cloud Provider</description>
    <label>Cloud Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>