objects/Licensing_Event__e/fields/Cloud_Region__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Region__c</fullName>
    <description>Cloud Region</description>
    <label>Cloud Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>