objects/Licensing_Event__e/fields/Compliance_Framework__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Framework__c</fullName>
    <description>Compliance Framework</description>
    <label>Compliance Framework</label>
    <length>255</length>
    <type>Text</type>
</CustomField>