objects/Licensing_Event__e/fields/Data_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Data_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data Sharing</description>
    <label>Data Sharing</label>
    <type>Checkbox</type>
</CustomField>