objects/Licensing_Event__e/fields/Deployment_ID__c.field-meta.xml
<CustomField>
    <fullName>Deployment_ID__c</fullName>
    <description>Deployment ID</description>
    <label>Deployment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>