objects/Licensing_Event__e/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Domain</description>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>