objects/Licensing_Event__e/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>