objects/Licensing_Event__e/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Environment</description>
    <label>Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>