objects/Licensing_Event__e/fields/Fed_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Fed_Ramp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fed Ramp</description>
    <label>Fed Ramp</label>
    <type>Checkbox</type>
</CustomField>