objects/Licensing_Event__e/fields/Hostnames__c.field-meta.xml
<CustomField>
    <fullName>Hostnames__c</fullName>
    <description>Hostnames</description>
    <label>Hostnames</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>