objects/Licensing_Event__e/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <description>Infrastructure</description>
    <label>Infrastructure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>