objects/Licensing_Event__e/fields/IsPoc__c.field-meta.xml
<CustomField>
    <fullName>IsPoc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsPoc flag</description>
    <label>IsPoc</label>
    <type>Checkbox</type>
</CustomField>