objects/Licensing_Event__e/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes</description>
    <label>Notes</label>
    <length>2015</length>
    <type>LongTextArea</type>
</CustomField>