objects/Licensing_Event__e/fields/OnPrem__c.field-meta.xml
<CustomField>
    <fullName>OnPrem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OnPrem</description>
    <label>OnPrem</label>
    <type>Checkbox</type>
</CustomField>