objects/Licensing_Event__e/fields/POC_Request__c.field-meta.xml
<CustomField>
    <fullName>POC_Request__c</fullName>
    <description>POC Request Id</description>
    <label>POC Request</label>
    <length>18</length>
    <type>Text</type>
</CustomField>