objects/Licensing_Event__e/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <description>SalesOrder</description>
    <label>SalesOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>