objects/Licensing_Event__e/fields/Server_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Device_Type__c</fullName>
    <description>Server Device Type</description>
    <label>Server Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>