objects/Licensing_Event__e/fields/Taas_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Taas_Admin_Email__c</fullName>
    <description>Taas Admin Email</description>
    <label>Taas Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>