objects/Licensing_Event__e/fields/Titankube__c.field-meta.xml
<CustomField>
    <fullName>Titankube__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Titankube</description>
    <label>Titankube</label>
    <type>Checkbox</type>
</CustomField>