objects/Licensing_Event__e/fields/VanityURL__c.field-meta.xml
<CustomField>
    <fullName>VanityURL__c</fullName>
    <description>VanityURL</description>
    <label>VanityURL</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>