objects/Licensing_Event__e/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version</description>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>